force-app/main/default/objects/Program__c/fields/Estimated_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Finish_Date__c</fullName>
    <label>Estimated Finish Date</label>
    <type>Date</type>
</CustomField>