force-app/main/default/objects/Program__c/fields/FG__c.field-meta.xml
<CustomField>
    <fullName>FG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מילוי טפסים</label>
    <type>Checkbox</type>
</CustomField>