force-app/main/default/objects/Program__c/fields/FormTitanUrl__c.field-meta.xml
<CustomField>
    <fullName>FormTitanUrl__c</fullName>
    <formula>&apos;https://shmuel.formtitan.com/contactProfession2?fld36=&apos; &amp;  External_Program_Id__c 
&amp; &apos;&amp;fld49=&apos; &amp;  Program_Internal_ID__c 
&amp; &apos;&amp;fld44=&apos; &amp;   Responsible_Contact__r.Email 
&amp; &apos;&amp;fld50=&apos; &amp;   IF(Treatment_by_an_external_Entity__c, &apos;true&apos;, &apos;false&apos;)
&amp; &apos;&amp;fld52=&apos; &amp;  Responsible_Contact__r.Email 
&amp; &apos;&amp;fld54=&apos; &amp;   Name  
&amp; &apos;&amp;fld60=&apos; &amp;  Responsible_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormTitanUrl</label>
    <type>Text</type>
</CustomField>