force-app/main/default/objects/Program__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מפעיל התוכנית</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Service_provider__c</field>
            <operation>equals</operation>
            <value>מפעיל</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>תוכניות</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>