force-app/main/default/objects/Program__c/fields/Operator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>איש קשר מטעם המפעיל</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Service_provider__c</field>
            <operation>equals</operation>
            <value>מפעיל, יחידה של זרוע עבודה</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>איש קשר מטעם המפעיל</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>