force-app/main/default/objects/Program__c/fields/Program_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Internal_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Internal ID</label>
    <type>Text</type>
</CustomField>