force-app/main/default/objects/Program__c/fields/Responsible_Contact__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>איש קשר מטעם היחידה האחראית</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>