force-app/main/default/objects/Program__c/fields/Responsible_unit__c.field-meta.xml
<CustomField>
    <fullName>Responsible_unit__c</fullName>
    <label>Responsible Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vocational_training</fullName>
                <label>הכשרה מקצועית</label>
            </value>
            <value>
                <fullName>Employers_Administration</fullName>
                <label>מינהלת מעסיקים</label>
            </value>
            <value>
                <fullName>Population_Management</fullName>
                <label>מנהל אוכלוסיות</label>
            </value>
            <value>
                <fullName>Maat</fullName>
                <label>מהט</label>
            </value>
            <value>
                <fullName>Strategy</fullName>
                <label>אסטרטגיה</label>
            </value>
            <value>
                <fullName>Headquarters</fullName>
                <label>מטה ממונה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>