force-app/main/default/objects/Program__c/fields/Treatment_by_an_external_Entity__c.field-meta.xml
<CustomField>
    <fullName>Treatment_by_an_external_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treatment by an external Entity</label>
    <type>Checkbox</type>
</CustomField>