force-app/main/default/objects/Program__c/fields/Unique_Employer_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Unique_Employer_Email_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Employer Email Template</label>
    <type>Checkbox</type>
</CustomField>