force-app/main/default/objects/Program__c/fields/Zroaa_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zroaa_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>איש קשר מטעם היחידה בזרוע</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>זרוע העבודה</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (איש קשר מטעם היחידה בזרוע)</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>