force-app/main/default/objects/Program__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>FormTitanUrl__c</columns>
    <columns>Branch__c</columns>
    <columns>Operator__c</columns>
    <columns>Treatment_by_an_external_Entity__c</columns>
    <columns>Operator_Contact__c</columns>
    <columns>Responsible_Contact__c</columns>
    <columns>Landing_Page__c</columns>
    <columns>Program_Description__c</columns>
    <columns>External_Program_Id__c</columns>
    <columns>Only_Prat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>